# Aider-Gatekeeper

./: .gitignore  README.md  pyproject.toml  requirements.txt  start.ps1  start.sh
src/aider_gatekeeper/: __init__.py  chetna_ai.py  cli.py  config.py  main.py  token_truncation.py  yaml_injection.py
